--- a/shippable.yml
+++ b/shippable.yml
@@ -5,4 +5,9 @@ jdk:
 	
 build:
 	ci:
-	- mvn test
+		#Create folders for test and code coverage
+    	- mkdir -p shippable/testresults
+    	- mkdir -p shippable/codecoverage
+
+    	#Run test and code coverage and output results to the right folder
+    	- mvn clean cobertura:cobertura
