--- a/shippable.yml
+++ b/shippable.yml
@@ -10,4 +10,5 @@ build:
     - mkdir -p shippable/codecoverage
 
     #Run test and code coverage and output results to the right folder
+    - mvn surefire:test
     - mvn clean cobertura:cobertura
