--- a/shippable.yml
+++ b/shippable.yml
@@ -10,4 +10,4 @@ build:
     - mkdir -p shippable/codecoverage
 
     #Run test and code coverage and output results to the right folder
-    - mvn clean cobertura:cobertura
+    - mvn surefire:test
